syntax = "proto3";

package poll;

import "shared.proto";

option java_multiple_files = true;
option java_package = "com.pollvite.grpc.poll";
option java_outer_classname = "PollProto";

service PollChanService {
  rpc getPollChanById (shared.IdDto) returns (PollChanReadDto) {}
  rpc createPollChan (PollChanCreateDto) returns (PollChanReadDto) {}
  rpc editPollChan (PollChanEditDto) returns (PollChanReadDto) {}
  rpc deletePollChan (shared.IdDto) returns (PollChanReadDto) {}
}

message PollChanDto {
  string owner = 1;
  string title = 2;
  string description = 3;
}

message PollChanCreateDto {
  PollChanDto core = 1;
}

message PollChanEditDto {
  shared.IdDto id = 1;
  PollChanDto core = 2;
}

message PollChanReadDto {
  shared.IdDto id = 1;
  PollChanDto core = 2;
}